--- a/BuildWeek1/welcome.html
+++ b/BuildWeek1/welcome.html
@@ -49,8 +49,7 @@
                 </div>
                 <!-- Button Proceed -->
                 <div id="boxButton">
-                    <a href="question.html"><button id="proceedButton" type="button"
-                            class="blueButton">PROCEED</button></a>
+                    <a href="question.html"><button id="proceedButton" type="button" class="blueButton">PROCEED</button></a>
                 </div>
             </section>
         </main>
