--- a/BuildWeek1/question.html
+++ b/BuildWeek1/question.html
@@ -36,13 +36,12 @@
                 
             </div>
             <!-- Button Next -->
-            <div id="nextButton" class="blueButton">
-                <button type="button">NEXT</button>
+            <div id="nextButtonBox">
+                <button id="nextButton" type="button" class="blueButton">NEXT</button>
             </div>
             <!-- Question Tracker -->
             <div>
-                <h3 id="questionNumber">QUESTION <span id="number"></span> / <span id="questionLength"
-                        class="purple"></span></h3>
+                <h3 id="questionNumber">QUESTION <span id="number"></span> / <span id="questionLength" class="purple"></span></h3>
             </div>
         </main>
     </div>
