--- a/BuildWeek1/question.html
+++ b/BuildWeek1/question.html
@@ -20,9 +20,9 @@
             <div id="timer">
                 <div id="timerCircle">
                     <div id="innerCircle">
-                        <p>SECONDS</p>
+                        <p class="innerP">SECONDS</p>
                         <p id="seconds">30</p>
-                        <p>REMAINING</p>
+                        <p class="innerP">REMAINING</p>
                     </div>
                 </div>
             </div>
