--- a/BuildWeek1/result.html
+++ b/BuildWeek1/result.html
@@ -12,7 +12,7 @@
 <body>
     <div id="resultsContainer" class="container">
         <!-- Header -->
-        <header>
+        <header id="headerResult">
             <img id="logoEpicode" alt="logo_epicode" src="assets/img/epicode_logo.png">
         </header>
         <!-- Main -->
@@ -25,26 +25,27 @@
             <!-- Result Container -->
             <div id="resultBox">
                 <!-- Correct Answers  -->
-                <div id="correctAnswers" class="glow">
+                <div id="correctAnswers" class="glow align">
                     <h2>Correct</h2>
                     <h2>66.7%</h2>
                     <p>4/6 questions</p>
                 </div>
                 <!-- Grafico del risultato -->
-                <div id="graphicResults">
+                <div id="graphicResults" class="align">
                     <p>Congratulations!<br><span class="blueText">You passed the exam.</span></p>
-                    <p>We'll send you the certficate in few minutes.<br>Check your email (including promotions / spamfolder)
+                    <p>We'll send you the certficate in few minutes.<br>Check your email (including promotions /
+                        spamfolder)
                     </p>
                 </div>
                 <!-- Wrong Answers  -->
-                <div id="wrongAnswers" class="glow">
+                <div id="wrongAnswers" class="glow align">
                     <h2>Wrong</h2>
                     <h2>33.3%</h2>
                     <p>2/6 questions</p>
                 </div>
             </div>
             <!-- Bottom -->
-            <div>
+            <div id="buttonRateUs">
                 <a href="review.html"><button id="rateUs">RATE US</button></a>
             </div>
         </main>
