--- a/BuildWeek1/question.html
+++ b/BuildWeek1/question.html
@@ -35,13 +35,13 @@
             <div id="answers">
                 
             </div>
+            <!-- Question Tracker -->
+            <div id="questionTracker">
+                <h3 id="questionNumber">QUESTION <span id="number"></span> / <span id="questionLength" class="purple"></span></h3>
+            </div>
             <!-- Button Next -->
             <div id="nextButtonBox">
                 <button id="nextButton" type="button" class="blueButton">NEXT</button>
-            </div>
-            <!-- Question Tracker -->
-            <div>
-                <h3 id="questionNumber">QUESTION <span id="number"></span> / <span id="questionLength" class="purple"></span></h3>
             </div>
         </main>
     </div>
