upgrade fine giornata 2

--- a/BuildWeek1/question.html
+++ b/BuildWeek1/question.html
@@ -13,7 +13,7 @@
     <!-- Container -->
     <div id="questionContainer" class="container">
         <!-- Header -->
-        <header>
+        <header id="headerQuestion">
             <!-- Logo -->
             <img id="logoEpicode" alt="logo_epicode" src="assets/img/epicode_logo.png">
             <!-- Timer -->
@@ -21,7 +21,7 @@
                 <div id="timerCircle">
                     <div id="innerCircle">
                         <p class="innerP">SECONDS</p>
-                        <p id="seconds">30</p>
+                        <p id="seconds"></p>
                         <p class="innerP">REMAINING</p>
                     </div>
                 </div>
