--- a/BuildWeek1/result.html
+++ b/BuildWeek1/result.html
@@ -32,10 +32,9 @@
                 </div>
                 <!-- Grafico del risultato -->
                 <div id="graphicResults" class="align">
-                    <p>Congratulations!<br><span class="blueText">You passed the exam.</span></p>
-                    <p>We'll send you the certficate in few minutes.<br>Check your email (including promotions /
-                        spamfolder)
-                    </p>
+                    <h4>Congratulations!<br /><span style="color: #00ffff">You passed the exam.</span></h4>
+                    <p>We'll send you the certficate <br />in few minutes.<br />Check your email (including<br />promotions / spamfolder)</p>
+                    <canvas id="myCanvas" width="400" height="400"></canvas>
                 </div>
                 <!-- Wrong Answers  -->
                 <div id="wrongAnswers" class="glow align">
