--- a/BuildWeek1/review.html
+++ b/BuildWeek1/review.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div id="reviewContainer" class="container"></div>
+    <div id="reviewContainer" class="container">
         <!-- Header -->
         <header>
             <img id="logoEpicode" alt="logo_epicode" src="assets/img/epicode_logo.png">
@@ -78,8 +78,8 @@
                     <input type="text" placeholder="Write your comment here">
                 </form>
                 <!-- More info button -->
-                <div id="moreInfoButton" class="blueButton">
-                    <a href="javascript:void(0)"><button id="">MORE INFO</button></a>
+                <div id="moreInfoButton">
+                    <a href="javascript:void(0)"><button id="moreInfo" class="blueButton">MORE INFO</button></a>
                 </div>
         </main>
     </div>
