--- a/BuildWeek1/welcome.html
+++ b/BuildWeek1/welcome.html
@@ -22,7 +22,7 @@
             <!-- Istructions -->
             <h1>Welcome to<br><b>your exam</b></h1>
             <section id="instructions">
-                <h2 id="istructionsTitle" class="purple">Instructions</h2>
+                <h2 id="instructionsTitle" class="purple">Instructions</h2>
                 <p id="istructionsPar">We don't expect most engineers to know the answers to all of these<br>questions,
                     so don't worry if you're unsure of a few of them</p>
                 <ul id="istructionList">
