--- a/BuildWeek1/result.html
+++ b/BuildWeek1/result.html
@@ -27,8 +27,8 @@
                 <!-- Correct Answers  -->
                 <div id="correctAnswers" class="glow align">
                     <h2>Correct</h2>
-                    <h2>66.7%</h2>
-                    <p>4/6 questions</p>
+                    <h2><span id="correct"></span> %</h2>
+                    <p><span id="numberCorrect"></span>/<span class="totalQuestions"></span> questions</p>
                 </div>
                 <!-- Grafico del risultato -->
                 <div id="graphicResults" class="align">
@@ -39,8 +39,8 @@
                 <!-- Wrong Answers  -->
                 <div id="wrongAnswers" class="glow align">
                     <h2>Wrong</h2>
-                    <h2>33.3%</h2>
-                    <p>2/6 questions</p>
+                    <h2><span id="wrong"></span> %</h2>
+                    <p><span id="numberWrong"></span>/<span class="totalQuestions"></span> questions</p>
                 </div>
             </div>
             <!-- Bottom -->
