update css welcome

--- a/BuildWeek1/welcome.html
+++ b/BuildWeek1/welcome.html
@@ -38,14 +38,13 @@
                     <h3 id="titleDifficulSelect"> Choose difficulty </h3>
                     <div class="select">
                         <select id="selectDifficult" name="difficult">
-                            <option value=""></option>
-                            <option value="easy">Easy</option>
-                            <option value="Hard">Hard</option>
+                            <option class="alignDifficulty" value=""></option>
+                            <option class="alignDifficulty" value="easy">Easy</option>
+                            <option class="alignDifficulty" value="Hard">Hard</option>
                         </select><br>
                     </div>
                     <!-- Checkbox terms -->
-                    <input type="checkbox" id="terms"> <label id="labelCheckbox" for="checkbox">I promise to answer myself
-                        without help from anyone</label>
+                    <input type="checkbox" id="terms"><label id="labelCheckbox" for="checkbox">I promise to answer myself without help from anyone</label>
                 </div>
                 <!-- Button Proceed -->
                 <div id="boxButton">
