--- a/BuildWeek1/result.html
+++ b/BuildWeek1/result.html
@@ -28,19 +28,20 @@
                 <div id="correctAnswers" class="glow align">
                     <h2>Correct</h2>
                     <h2><span id="correct"></span> %</h2>
-                    <p><span id="numberCorrect"></span>/<span class="totalQuestions"></span> questions</p>
+                    <p><span id="numberCorrect"></span> / <span class="totalQuestions"></span> questions</p>
                 </div>
                 <!-- Grafico del risultato -->
                 <div id="graphicResults" class="align">
-                    <h4>Congratulations!<br /><span style="color: #00ffff">You passed the exam.</span></h4>
-                    <p>We'll send you the certficate <br />in few minutes.<br />Check your email (including<br />promotions / spamfolder)</p>
+                    <div id="innerResult">
+                        
+                    </div>
                     <canvas id="myCanvas" width="400" height="400"></canvas>
                 </div>
                 <!-- Wrong Answers  -->
                 <div id="wrongAnswers" class="glow align">
                     <h2>Wrong</h2>
                     <h2><span id="wrong"></span> %</h2>
-                    <p><span id="numberWrong"></span>/<span class="totalQuestions"></span> questions</p>
+                    <p><span id="numberWrong"></span> / <span class="totalQuestions"></span> questions</p>
                 </div>
             </div>
             <!-- Bottom -->
