edit css and javascript

--- a/BuildWeek1/question.html
+++ b/BuildWeek1/question.html
@@ -23,6 +23,7 @@
                         <p class="innerP">SECONDS</p>
                         <p id="seconds"></p>
                         <p class="innerP">REMAINING</p>
+                        <canvas id="timerCanvas" width="200" height="200"></canvas>
                     </div>
                 </div>
             </div>
