--- a/BuildWeek1/result.html
+++ b/BuildWeek1/result.html
@@ -25,7 +25,7 @@
             <!-- Result Container -->
             <div id="resultBox">
                 <!-- Correct Answers  -->
-                <div id="correctAnswers" class="glow align">
+                <div id="correctAnswers" class="noGlow align">
                     <h2>Correct</h2>
                     <h2><span id="correct"></span> %</h2>
                     <p><span id="numberCorrect"></span> / <span class="totalQuestions"></span> questions</p>
@@ -38,7 +38,7 @@
                     <canvas id="myCanvas" width="400" height="400"></canvas>
                 </div>
                 <!-- Wrong Answers  -->
-                <div id="wrongAnswers" class="glow align">
+                <div id="wrongAnswers" class="noGlow align">
                     <h2>Wrong</h2>
                     <h2><span id="wrong"></span> %</h2>
                     <p><span id="numberWrong"></span> / <span class="totalQuestions"></span> questions</p>
