--- a/BuildWeek1/welcome.html
+++ b/BuildWeek1/welcome.html
@@ -23,9 +23,9 @@
             <h1>Welcome to<br><b>your exam</b></h1>
             <section id="instructions">
                 <h2 id="instructionsTitle" class="purple">Instructions</h2>
-                <p id="istructionsPar">We don't expect most engineers to know the answers to all of these<br>questions,
+                <p id="instructionsPar">We don't expect most engineers to know the answers to all of these<br>questions,
                     so don't worry if you're unsure of a few of them</p>
-                <ul id="istructionList">
+                <ul id="instructionList">
                     <li>Each question is <b>time </b>and can only be <b>answered once.</b></li>
                     <li>Changing browser tab or opening other windows will <b>invalidate the question.</b></li>
                     <li>This exam will take approx. <b>0-5 minutes.</b></li>
