--- a/EserciziSettimana05/day02_26_04_23/navbar.html
+++ b/EserciziSettimana05/day02_26_04_23/navbar.html
@@ -8,7 +8,7 @@
     <title>Navbar</title>
 </head>
 <body>
-    <div class="containerNav">
+    <nav class="containerNav">
         <div class="link">Our Honey</div>
         <div class="link">Trace Honey</div>
         <div class="link big">
@@ -17,6 +17,6 @@
         </div>
         <div class="link">Facilities</div>
         <div class="link">Contacts</div>
-    </div>
+    </nav>
 </body>
 </html>
