--- a/EserciziSettimana05/day04_27_04_23/postit.html
+++ b/EserciziSettimana05/day04_27_04_23/postit.html
@@ -16,42 +16,42 @@
 <body>
     <div class="container">
 
-        <div class="postIt yellow leftUp">
+        <div id="uno" class="postIt yellow leftUp">
             <h2>Task #1</h2>
             <p>Creare i postit</p>
         </div>
 
-        <div class="postIt green right">
+        <div id="due" class="postIt green right">
             <h2>Task #2</h2>
             <p>Colorarli</p>
         </div>
 
-        <div class="postIt purple left">
+        <div id="tre" class="postIt purple left">
             <h2>Task #3</h2>
             <p>Affiancali</p>
         </div>
 
-        <div class="postIt green right">
+        <div id="quattro" class="postIt green right">
             <h2>Task #4</h2>
             <p>Spaziarli</p>
         </div>
 
-        <div class="postIt yellow right">
+        <div id="cinque" class="postIt yellow right">
             <h2>Task #5</h2>
             <p>Ombreggiarli</p>
         </div>
 
-        <div class="postIt purple leftUp">
+        <div id="sei" class="postIt purple leftUp">
             <h2>Task #6</h2>
             <p>Ruotarli</p>
         </div>
 
-        <div class="postIt yellow leftRight">
+        <div id="sette" class="postIt yellow leftRight">
             <h2>Task #7</h2>
             <p>Animarli</p>
         </div>
 
-        <div class="postIt green rightRight">
+        <div id="otto" class="postIt green rightRight">
             <h2>Task #8</h2>
             <p>Testarli</p>
         </div>
