--- a/EserciziSettimana06/day01_02_05_23/index.html
+++ b/EserciziSettimana06/day01_02_05_23/index.html
@@ -14,20 +14,22 @@
 
 <body>
 
-    <div class="h1 text-center mb-5">Partica con il Grid System</div>
+    <div class="text-center">
+
+        <div class="h1 mb-5">Pratica con il Grid System</div>
 
 
         <!-- Esercizio 1 -->
-        <div class="h2 text-center">Esercizio 1</div>
+        <div class="h2">Esercizio 1</div>
 
-        <div class="row mb-3 text-white">
+        <div class="row mb-3 text-center text-white">
             <div class="bg-primary col  p-3 border border-dark border-3">TESTO</div>
             <div class="bg-primary col p-3 border border-dark border-3">TESTO</div>
             <div class="bg-primary col p-3 border border-dark border-3">TESTO</div>
         </div>
 
         <!-- Esercizio 2 -->
-        <div class="h2 text-center">Esercizio 2</div>
+        <div class="h2">Esercizio 2</div>
 
         <div class="row mb-3 text-dark">
 
@@ -38,7 +40,7 @@
         </div>
 
         <!-- Esercizio 3 -->
-        <div class="h2 text-center">Esercizio 3</div>
+        <div class="h2">Esercizio 3</div>
         <div class="row mb-1 text-white">
             <div class="col bg-success p-3 border border-dark border-3">TESTO</div>
             <div class="col bg-success p-3 border border-dark border-3">TESTO</div>
@@ -71,7 +73,7 @@
         </div>
 
         <!-- Esercizio 4 -->
-        <div class="h2 text-center">Esercizio 4</div>
+        <div class="h2">Esercizio 4</div>
         <div class="row mb-3 text-white">
             <div class="col col-lg-3 bg-danger p-3 border border-dark border-3">TESTO</div>
             <div class="col col-lg-6 bg-danger p-3 border border-dark border-3">TESTO</div>
@@ -79,7 +81,7 @@
         </div>
 
         <!-- Esercizio 5 -->
-        <div class="h2 text-center">Esercizio 5</div>
+        <div class="h2">Esercizio 5</div>
         <div class="row mb-3 text-white">
             <div class="col-lg-8 bg-primary p-3 border border-dark border-3">
                 <div class="row">
@@ -91,11 +93,13 @@
         </div>
 
         <!-- Esercizio 6 -->
-        <div class="h2 text-center">Esercizio 6</div>
+        <div class="h2">Esercizio 6</div>
         <div class="row mb-5 text-white">
             <div class="col-2 col-lg-2 bg-dark p-3">TESTO</div>
             <div class="col-2 col-lg-2 offset-lg-2 bg-dark p-3">TESTO</div>
         </div>
+
+    </div>
 
     </div>
 
