--- a/EserciziSettimana06/day01_02_05_23/index.html
+++ b/EserciziSettimana06/day01_02_05_23/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-    <div class="text-center">
+    <div class="container text-center">
 
         <div class="h1 mb-5">Pratica con il Grid System</div>
 
