--- a/EserciziSettimana06/day01_02_05_23/index.html
+++ b/EserciziSettimana06/day01_02_05_23/index.html
@@ -42,34 +42,20 @@
         <!-- Esercizio 3 -->
         <div class="h2">Esercizio 3</div>
         <div class="row mb-1 text-white">
-            <div class="col bg-success p-3 border border-dark border-3">TESTO</div>
-            <div class="col bg-success p-3 border border-dark border-3">TESTO</div>
-            <div class="col bg-success p-3 border border-dark border-3">TESTO</div>
-        </div>
-        <div class="row mb-1 text-white">
-            <div class="col-sm bg-success p-3 border border-dark border-3">TESTO</div>
-            <div class="col-sm bg-success p-3 border border-dark border-3">TESTO</div>
-            <div class="col-sm bg-success p-3 border border-dark border-3">TESTO</div>
-        </div>
-        <div class="row mb-1 text-white">
-            <div class="col-md bg-success p-3 border border-dark border-3">TESTO</div>
-            <div class="col-md bg-success p-3 border border-dark border-3">TESTO</div>
-            <div class="col-md bg-success p-3 border border-dark border-3">TESTO</div>
-        </div>
-        <div class="row mb-1 text-white">
-            <div class="col-lg bg-success p-3 border border-dark border-3">TESTO</div>
-            <div class="col-lg bg-success p-3 border border-dark border-3">TESTO</div>
-            <div class="col-lg bg-success p-3 border border-dark border-3">TESTO</div>
-        </div>
-        <div class="row mb-1 text-white">
-            <div class="col-xl bg-success p-3 border border-dark border-3">TESTO</div>
-            <div class="col-xl bg-success p-3 border border-dark border-3">TESTO</div>
-            <div class="col-xl bg-success p-3 border border-dark border-3">TESTO</div>
-        </div>
-        <div class="row mb-3 text-white">
-            <div class="col-xxl bg-success p-3 border border-dark border-3">TESTO</div>
-            <div class="col-xxl bg-success p-3 border border-dark border-3">TESTO</div>
-            <div class="col-xxl bg-success p-3 border border-dark border-3">TESTO</div>
+
+            <div class="col-xl-1 col-lg-2 col-md-3 col-sm-4 col-4 bg-success p-3 border border-dark border-3">TESTO</div>
+            <div class="col-xl-1 col-lg-2 col-md-3 col-sm-4 col-4 bg-success p-3 border border-dark border-3">TESTO</div>
+            <div class="col-xl-1 col-lg-2 col-md-3 col-sm-4 col-4 bg-success p-3 border border-dark border-3">TESTO</div>
+            <div class="col-xl-1 col-lg-2 col-md-3 col-sm-4 col-4 bg-success p-3 border border-dark border-3">TESTO</div>
+            <div class="col-xl-1 col-lg-2 col-md-3 col-sm-4 col-4 bg-success p-3 border border-dark border-3">TESTO</div>
+            <div class="col-xl-1 col-lg-2 col-md-3 col-sm-4 col-4 bg-success p-3 border border-dark border-3">TESTO</div>
+            <div class="col-xl-1 col-lg-2 col-md-3 col-sm-4 col-4 bg-success p-3 border border-dark border-3">TESTO</div>
+            <div class="col-xl-1 col-lg-2 col-md-3 col-sm-4 col-4 bg-success p-3 border border-dark border-3">TESTO</div>
+            <div class="col-xl-1 col-lg-2 col-md-3 col-sm-4 col-4 bg-success p-3 border border-dark border-3">TESTO</div>
+            <div class="col-xl-1 col-lg-2 col-md-3 col-sm-4 col-4 bg-success p-3 border border-dark border-3">TESTO</div>
+            <div class="col-xl-1 col-lg-2 col-md-3 col-sm-4 col-4 bg-success p-3 border border-dark border-3">TESTO</div>
+            <div class="col-xl-1 col-lg-2 col-md-3 col-sm-4 col-4 bg-success p-3 border border-dark border-3">TESTO</div>
+    
         </div>
 
         <!-- Esercizio 4 -->
