--- a/EserciziSettimana06/day02_03_05_23/index.html
+++ b/EserciziSettimana06/day02_03_05_23/index.html
@@ -213,12 +213,12 @@
             cardS.innerHTML = '<div class="card p-0 border-2 border-info"><img src="assets/img/dream-950x530.jpg" class="card-img-top" alt="..."><div class="card-body"><h5 class="card-title">Destinazione</h5><p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid eligendi voluptatum facere aperiam ea a minima reprehenderit impedit eos mollitia. Incidunt omnis molestiae alias at totam nihil aut commodi harum.</p><a href="#" class="btn btn-info">Prenota</a></div></div>';
 
             cardsSaldi.appendChild(cardS);
-            
+
         }
 
         cardsSaldi.lastElementChild.classList.add('d-md-none', 'd-lg-block')
 
-        //inserimento card nella sezione WELCOME - L'ultimo elemento scopare nella versione mobile
+        //inserimento card nella sezione WELCOME
         const summer = document.getElementById('summer');
         
 
