--- a/EserciziSettimana06/day02_03_05_23/index.html
+++ b/EserciziSettimana06/day02_03_05_23/index.html
@@ -107,9 +107,9 @@
         <!-- LAST MINUTE -->
         <div id="lastMinute" class="container p-0 my-5">
             <div class="row m-0">
-                <p class="col p-0 fs-3 ">Last Minute</p>
+                <p class="col p-0 fs-3">Last Minute</p>
             </div>
-            <div class="row row-cols-lg-6 row-cols-md-3 row-cols-2">
+            <div class="row row-cols-lg-6 row-cols-md-3 row-cols-2 gy-2">
                 <div class="col">
                     <img src="assets/img/dream-950x530.jpg" class="shadow-lg rounded-4 w-100" alt="">
                 </div>
