--- a/EserciziSettimana06/ProgettoSettimana6_05_05_23/index.html
+++ b/EserciziSettimana06/ProgettoSettimana6_05_05_23/index.html
@@ -698,10 +698,10 @@
             <div class="container-fluid side">
                 <div class="container border-top pt-3">
                     <div class="row  row-cols-sm-2 row-cols-1 grey">
-                        <div class="col-sm-8 col text-sm-start text-center">
+                        <div class="col col-sm-8  text-sm-start text-center">
                             <p>© 2023 Geeks. All Right Reserved.</p>
                         </div>
-                        <div class="col d-flex justify-content-between text-end">
+                        <div class="col col-sm-4 d-flex justify-content-between text-end">
                             <p>Privacy</p>
                             <p>Terms</p>
                             <p>Feedback</p>
