--- a/EserciziSettimana07/day01_08_05_23/index.html
+++ b/EserciziSettimana07/day01_08_05_23/index.html
@@ -17,14 +17,14 @@
                     <h1>Form Animali</h1>
                     <form id="animalForm">
                         <label for="nome">Nome animale</label><br>
-                        <input type="text" class="mb-3" id="nome" autocomplete="off"><br>
+                        <input type="text" class="mb-3" name="nome" id="nome" autocomplete="off"><br>
                         <label for="padrone">Padrone</label><br>
-                        <input type="text" class="mb-3" id="padrone" autocomplete="off"><br>
+                        <input type="text" class="mb-3" name="padrone" id="padrone" autocomplete="off"><br>
                         <label for="specie">Specie</label><br>
-                        <input type="text" class="mb-3" id="specie" autocomplete="off"><br>
+                        <input type="text" class="mb-3" name="specie" id="specie" autocomplete="off"><br>
                         <label for="razza">Razza</label><br>
-                        <input type="text" class="mb-3" id="razza" autocomplete="off"><br>
-                        <input type="submit" id="btnAdd" value="AGGIUNGI" class="btn px-5">
+                        <input type="text" class="mb-3" name="razza" id="razza" autocomplete="off"><br>
+                        <input type="submit" name="btnAdd" id="btnAdd" value="AGGIUNGI" class="btn px-5">
                     </form>
                 </div>
             </div>
