--- a/EserciziSettimana07/ProgettoSettimana7_12_05_23/homepage.html
+++ b/EserciziSettimana07/ProgettoSettimana7_12_05_23/homepage.html
@@ -23,7 +23,7 @@
             <div class="row row-cols-2 row-cols-md-3 row-cols-lg-5 g-4">
                 <div class="col">
                   <div class="card h-100">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Card title</h5>
                       <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
