--- a/EserciziSettimana07/ProgettoSettimana7_12_05_23/homepage.html
+++ b/EserciziSettimana07/ProgettoSettimana7_12_05_23/homepage.html
@@ -18,7 +18,9 @@
     
     <!-- MAIN -->
     <main>
-
+        <div class="container mt-3">
+            <h2>PRODOTTI</h2>
+        </div>
         <div id="product" class="container mt-5">
             <div class="row row-cols-2 row-cols-md-3 row-cols-lg-5 g-4">
                 <div class="col">
