--- a/EserciziSettimana07/ProgettoSettimana7_12_05_23/details.html
+++ b/EserciziSettimana07/ProgettoSettimana7_12_05_23/details.html
@@ -16,10 +16,18 @@
         <div id="headerContainer" class="cantainer-fluid row p-4"></div>
     </header>
 
+    <main>
+        <div id="containerDetails" class="container mt-5"></div>
+    </main>
+
+
     <!-- BOOTSTRAP -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
     <!-- PAGE STRUCTURE LOAD -->
     <script src="./assets/js/pageStructure.js"></script>
+
+    <!-- FIND MORE BUILD -->
+    <script src="./assets/js/details.js"></script>
 </body>
 </html>
