--- a/EserciziSettimana07/ProgettoSettimana7_12_05_23/backOffice.html
+++ b/EserciziSettimana07/ProgettoSettimana7_12_05_23/backOffice.html
@@ -18,8 +18,8 @@
 
     <main>
 
-        <div id="mainContainer" class="container mt-5 d-flex justify-content-center">
-            <!-- <form method="post" class="w-50 shadow-lg rounded-2 p-3">
+        <div id="mainContainer" class="container mt-5 d-flex flex-column align-items-center">
+            <form method="post" class="w-50 shadow-lg rounded-2 p-3">
                 <div class="mb-3">
                     <label for="nameProduct" class="form-label">Nome prodotto</label>
                     <input type="text" class="form-control" id="nameProduct" required>
@@ -47,18 +47,7 @@
                     </div>
                     <button id="modifyButton" type="button" class="btn">Modalità Modifica</button>
                 </div>
-                <button id="resetButton" type="reset" class="btn">Reset Form</button> -->
-                
-                <form method="post" class="w-50 shadow-lg rounded-2 p-3">
-
-                    <div class="mb-3">
-                        <input type="text" class="form-control" id="searchID" required>
-                    </div>
-                    <div class="text-center">
-                        <button type="button" class="btn orangeBtn">CERCA ID</button>
-                    </div>
-                        
-                </form>
+                <button id="resetButton" type="reset" class="btn">Reset Form</button>
             </form>
         </div>
 
