--- a/EserciziSettimana07/ProgettoSettimana7_12_05_23/backOffice.html
+++ b/EserciziSettimana07/ProgettoSettimana7_12_05_23/backOffice.html
@@ -22,27 +22,27 @@
             <form method="post" class="w-50 shadow-lg rounded-2 p-3">
                 <div class="mb-3">
                     <label for="nameProduct" class="form-label">Nome prodotto</label>
-                    <input type="text" class="form-control" id="nameProduct" required>
+                    <input type="text" class="form-control" id="nameProduct" autocomplete="off" required>
                 </div>
                 <div class="mb-3">
                     <label for="descriptionProduct" class="form-label">Descrizione prodotto</label>
-                    <input type="text" class="form-control" id="descriptionProduct" required>
+                    <input type="text" class="form-control" id="descriptionProduct" autocomplete="off" required>
                 </div>
                 <div class="mb-3">
                     <label for="brandProduct" class="form-label">Brand prodotto</label>
-                    <input type="text" class="form-control" id="brandProduct" required>
+                    <input type="text" class="form-control" id="brandProduct" autocomplete="off" required>
                 </div>
                 <div class="mb-3">
                     <label for="imgProduct" class="form-label">Immagine prodotto</label>
-                    <input type="text" class="form-control" id="imgProduct" required>
+                    <input type="text" class="form-control" id="imgProduct" autocomplete="off" required>
                 </div>
                 <div class="mb-3">
                     <label for="priceProduct" class="form-label">Prezzo prodotto<span style="font-size: 0.8em;"> (inserire valore numerico)</span></label>
-                    <input type="text" class="form-control" id="priceProduct" required>
+                    <input type="text" class="form-control" id="priceProduct" autocomplete="off" required>
                 </div>
                 <div class="mb-3 d-flex justify-content-between">
                     <div class="d-flex align-items-center">
-                       <button id="formButton" type="submit" class="btn me-2">Aggiungi prodotto</button>
+                       <button id="formButton" type="submit" class="btn me-2 orangeBtn">Aggiungi prodotto</button>
                        <p id="esito" class="m-0"></p> 
                     </div>
                     <button id="modifyButton" type="button" class="btn">Modalità Modifica</button>
