--- a/EserciziSettimana09/day02_23_05_23/index.html
+++ b/EserciziSettimana09/day02_23_05_23/index.html
@@ -34,6 +34,6 @@
         </form>
     </div>
     
-    <script src="./assets/script/bankApp.js"></script>
+    <script src="./assets/js/bankApp.js"></script>
 </body>
 </html>
