--- a/EserciziSettimana09/day02_23_05_23/index.html
+++ b/EserciziSettimana09/day02_23_05_23/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="son">
-        <h1>FIGLIO</h1>
+        <h1>MINORENNE</h1>
         <h3>Saldo : <span id="viewSonSaldo">0</span><span> €</span></h3>
         <form id="sonDeposit">
             <input type="number" id="sd">
@@ -22,7 +22,7 @@
     </div>
 
     <div class="mother">
-        <h1>MADRE <span style="font-size: 0.5em;">(10% interessi)</span></h1>
+        <h1>MAGGIORENNE <span style="font-size: 0.5em;">(10% interessi)</span></h1>
         <h3>Saldo : <span id="viewMotherSaldo">0</span><span> €</span></h3>
         <form id="motherDeposit">
             <input type="number" id="md">
