--- a/EserciziSettimana09/ProgettoSettimana9_26_05_23/home.html
+++ b/EserciziSettimana09/ProgettoSettimana9_26_05_23/home.html
@@ -76,23 +76,7 @@
 
                         <div class="text-white pt-3">
 
-                            <div id="displayUsers" class="row mx-3">
-
-                                <div class="col text-center mb-2">
-                                    <button type="button" class="btn m-0" style="border: none;" onclick="selectedUser(id)"><img src="https://d18zd1fdi56ai5.cloudfront.net/uuzu9m0au2fst8hfy7v5qtz1j5nj" alt="" class="rounded-circle" width="75px"></button>
-                                    <p>Giacomo</p>
-                                </div>
-                                
-
-                                <div class="col text-center">
-                                    <a href="./newUser.html" class="btn m-0"><i class="bi bi-person-fill-add text-white" style="font-size: 3em;"></i></a>
-                                    <p>Aggiungi</p>
-                                    <p>Utente</p>
-                                </div>
-
-                            </div>
-
-                            
+                            <div id="displayUsers" class="row mx-3"></div>                            
 
                         </div>
 
