--- a/EserciziSettimana09/ProgettoSettimana9_26_05_23/settings.html
+++ b/EserciziSettimana09/ProgettoSettimana9_26_05_23/settings.html
@@ -67,17 +67,16 @@
 
                 <div id="mainZone">
 
-                    <div id="utenteAttuale" class="text-white text-center">
-                        <i class="bi bi-person-fill text-white" style="font-size: 3em;"></i>
-                        <p>Nessun Utente Selezionato</p>
-                    </div> 
-                    
-                    <div id="users" class="overflow-y-scroll" style="height: 350px">
+                    <div class="row px-4">
 
-                        <div class="text-white pt-3">
+                        <div class="col text-center text-success">
+                            <a href="./addUser.html" class="btn m-0"><i class="bi bi-person-fill-add text-success" style="font-size: 3em;"></i></a>
+                            <p>Aggiungi</p><p>Utente</p>
+                        </div>
 
-                            <div id="displayUsers" class="row mx-3"></div>                            
-
+                        <div class="col text-center text-danger">
+                            <a href="./deleteUser.html" class="btn m-0"><i class="bi bi-person-fill-x text-danger" style="font-size: 3em;"></i></a>
+                            <p>Elimina</p><p>Utente</p>
                         </div>
 
                     </div>
